# symthaea

./: .flake-setup-summary.md  .gitignore  APPENDIX_P_CONSCIOUSNESS_RIGHTS.md  ARCHITECTURE_ASSESSMENT_2025.md  AUTONOMOUS_PREP_COMPLETE.md  AWAKENING_INTEGRATION_ASSESSMENT.md  AWAKENING_ROADMAP_2025.md  BINARY_HDV_FUNDAMENTAL_LIMITATIONS.md  CHANGELOG.md  CLAUDE.md  COGNITIVE_INTEGRATION_ANALYSIS.md  COLLECTIVE_CONSCIOUSNESS_COMPLETE.md  COMPILATION_FIXES_AND_VALIDATION_COMPLETE.md  COMPLETE_MANUSCRIPT_FOR_PDF.md  COMPLETE_SESSION_DELIVERABLES.md  COMPLETE_SESSION_REPORT.md  COMPLETE_SYSTEM_INTEGRATION_VALIDATION.md  COMPONENT_INVENTORY.md  COMPREHENSIVE_8_TOPOLOGY_VALIDATION_COMPLETE.md  COMPREHENSIVE_ANALYSIS_AND_ROADMAP_2025-12-26.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  COMPREHENSIVE_PROJECT_REVIEW_2025.md  CONTRIBUTING.md  COVER_LETTER.md  CURRENT_SESSION_SUMMARY.md  Cargo.toml  DAY_1_COMPLETE_SUMMARY.md  DAY_2_COMPLETE_SUMMARY.md  DAY_3_COGNITIVE_INTEGRATION_BUS.md  DAY_3_COGNITIVE_INTEGRATION_COMPLETE.md  DAY_4_CONTINUOUS_MIND_COMPLETE.md  DAY_5_INTEGRATION_ARCHITECTURE.md  DIMENSIONAL_SWEEP_RESULTS.md  ENHANCEMENT_5_PHASE_2_COMPLETE.md  ENHANCEMENT_6_COMPLETE.md  ENHANCEMENT_6_PHASE_1_COMPLETE.md  ENHANCEMENT_7_PHASE_2_PROGRESS.md  ENVIRONMENT_CLEANUP_REQUIRED.md  EPISTEMIC_CAUSAL_REASONING_DESIGN.md  EXECUTIVE_SUMMARY.md  (+153 more)
benches/: causal_reasoning_benchmark.rs  consciousness_benchmarks.rs  detailed_profiling.rs  enhancement_7_phase2_benchmarks.rs  episodic_benchmark.rs  full_system_profile.rs  hdc_benchmark.rs  incremental_benchmark.rs  lsh_benchmark.rs  ltc_benchmark.rs  nixos_language_benchmark.rs  optimization_benchmark.rs  parallel_benchmark.rs  phase3_causal_benchmarks.rs  phi_benchmark.rs  resonant_benchmarks.rs  simd_benchmark.rs  simhash_benchmark.rs  sparsity_benchmark.rs  zerocopy_benchmark.rs
book/: book.toml  custom.css
demos/: social_coherence_demo.rs
docs/: ARCHITECTURAL_EVOLUTION_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_V3.md  ARITHMETIC_ENGINE.md  ATTENTION_COMPETITION_ARENA_DESIGN.md  BENCHMARK_BASELINE_2025_12_23.md  CELEGANS_VALIDATION_COMPLETE.md  CLOSED_LEARNING_LOOP.md  CODEBASE_AUDIT_2025_12_24.md  COMPLETE_FIX_SUMMARY_DEC_28_2025.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  COMPREHENSIVE_REVIEW_DEC_2025.md  CONSCIOUSNESS_GATED_GENERATION.md  CONSCIOUSNESS_OBSERVATORY_COMPLETE.md  CONSCIOUS_EPISTEMOLOGY_COMPLETE.md  CONSCIOUS_LANGUAGE_ARCHITECTURE.md  CONSCIOUS_RESEARCH_COMPLETE_SUMMARY.md  CONSTITUTIONAL_VOICE_ARCHITECTURE.md  EFFICIENCY_FRONTIER_ANALYSIS.md  ENHANCEMENT_7_PHASE2_API.md  ENHANCEMENT_7_PHASE2_QUICKSTART.md  ENHANCEMENT_8_HYBRID_APPROACH_PLAN.md  ENHANCEMENT_8_IMPLEMENTATION_PLAN.md  ENHANCEMENT_8_ML_FAIRNESS_BENCHMARK.md  ENHANCEMENT_8_ROBUSTNESS_BENCHMARK.md  ENHANCEMENT_8_WEEK_1_COMPLETE.md  ENHANCEMENT_8_WEEK_2_COMPLETE.md  ENHANCEMENT_8_WEEK_3_COMPLETE.md  ENHANCEMENT_8_WEEK_3_PHI_HDC_RENAME_COMPLETE.md  ENHANCEMENT_8_WEEK_3_PROGRESS.md  ENHANCEMENT_8_WEEK_4_DAY_3_4_STATUS.md  ENHANCEMENT_8_WEEK_4_DAY_5_PREPARATION_COMPLETE.md  ENHANCEMENT_8_WEEK_4_PYPHI_INTEGRATION_PLAN.md  ENHANCEMENT_8_WEEK_4_SESSION_SUMMARY_DEC_27_2025.md  ENHANCEMENT_8_WEEK_4_VALIDATION_RESULTS_TEMPLATE.md  ENHANCEMENT_ROADMAP_PHASE_3.md  EXOTIC_TOPOLOGIES_COMPLETE_SUMMARY.md  GAP_ANALYSIS_AGI_ROADMAP.md  HDC_ENGINE_2.0_STATUS.md  HDC_LTC_RESONATOR_PATTERN.md  (+86 more)
examples/: activate_recursive_improvement.rs  adaptive_reasoning_demo.rs  awakening_demo_simple.rs  awakening_interactive.rs  beat_hypercube_4d.rs  benchmark_diagnostics.rs  benchmark_tts.rs  binarization_comparison.rs  bridge_hypothesis.rs  bridge_hypothesis_simple.rs  causal_explanation_demo.rs  causal_mind_training.rs.disabled  celegans_validation.rs  cladder_evaluation.rs  collective_consciousness_demo.rs  compare_phi_resonant.rs  comprehensive_topology_validation.rs  conscious_reasoning.rs  conscious_runtime_demo.rs  consciousness_driven_evolution_demo.rs  consciousness_guided_discovery_demo.rs  consciousness_monitor.rs  consciousness_observatory_demo.rs  consciousness_optimized_benchmark.rs  consciousness_optimized_demo.rs  continuous_mind_demo.rs  conversation_demo_annotated.rs  dimensional_sweep.rs  dynamic_language_demo.rs  efficiency_frontier.rs  enhancement_7_phase2_integration.rs  epistemic_causal_reasoning_demo.rs  fractal_dimension_phi_study.rs  fractal_validation.rs  full_8_topology_validation.rs  goldilocks_hypothesis.rs  hybrid_consciousness_topologies.rs  hypercube_dimension_sweep.rs  hypercube_dimensional_optimization.rs  hypercube_extended_sweep.rs  (+68 more)
papers/: CANONICAL_COMPONENT_DEFINITIONS.md  COMBINATION_STRATEGY.md  COMPREHENSIVE_REVIEW_REPORT.md  PAPER_01_COMPLETION_SUMMARY.md  PAPER_01_MASTER_EQUATION_DRAFT.md  PAPER_01_MASTER_EQUATION_OUTLINE.md  PAPER_01_SUBMISSION.tex  PAPER_01_SUBMISSION_READY.md  PAPER_02_AI_CONSCIOUSNESS_DRAFT.md  PAPER_02_AI_CONSCIOUSNESS_OUTLINE.md  PAPER_03_CLINICAL_VALIDATION_DRAFT.md  PAPER_03_CLINICAL_VALIDATION_OUTLINE.md  PAPER_04_BINDING_PROBLEM_DRAFT.md  PAPER_04_BINDING_PROBLEM_OUTLINE.md  PAPER_05_ENTROPIC_BRAIN_DRAFT.md  PAPER_06_SLEEP_ANESTHESIA_DRAFT.md  PAPER_07_GWT_PREDICTIVE_DRAFT.md  PAPER_08_HIGHER_ORDER_THOUGHT_DRAFT.md  PAPER_09_MATHEMATICAL_FORMALIZATION_DRAFT.md  PAPER_10_COMPARATIVE_FRAMEWORK_DRAFT.md  PAPER_11_DEVELOPMENTAL_PROGRESSION_DRAFT.md  PAPER_12_COMPUTATIONAL_IMPLEMENTATION_DRAFT.md  PAPER_13_CROSS_SPECIES_DRAFT.md  PAPER_14_DOC_PROTOCOL_DRAFT.md  PAPER_15_FUTURE_DIRECTIONS_DRAFT.md  PARADIGM_SHIFT_ANALYSIS.md  PARADIGM_SHIFT_SUMMARY.md  PUBLICATION_STRATEGY.md  README.md  RIGOROUS_SPECIFICATIONS.md  SATELLITE_ALTERED_STATES_COMBINED.md  SATELLITE_CLINICAL_COMBINED.md  SATELLITE_COMPUTATIONAL_COMBINED.md  SATELLITE_EVOLUTIONARY_COMBINED.md  SATELLITE_THEORETICAL_COMBINED.md  SESSION_SUMMARY_REVOLUTIONARY_IMPROVEMENTS.md  SUBMISSION_CHECKLIST.md  generate_figures.py  generate_paper02_figures.py  generate_paper03_figures.py  (+14 more)
scripts/: analyze_pyphi_results.py  benchmark-consciousness.sh  integrate-phase1.sh  (+2 more)
tools/symthaea-inspect/: Cargo.toml  README.md
tools/symthaea-inspect/src/: export.rs  main.rs  stats.rs  trace.rs
(+925 files in other folders)
