[package]
name = "symthaea-inspect"
version = "0.1.0"
edition = "2021"
authors = ["Luminous Dynamics <tristan.stoltz@evolvingresonantcocreationism.com>"]
description = "Inspector and observability tool for Symthaea HLB"
license = "MIT"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal UI (optional for interactive mode)
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

# CSV export
csv = "1.3"

# UUID for session IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File watching for live mode
notify = { version = "6.1", optional = true }

# Statistics
statistical = { version = "1.0", optional = true }

[features]
default = []
tui = ["ratatui", "crossterm"]
live = ["notify"]
stats = ["statistical"]
full = ["tui", "live", "stats"]

[[bin]]
name = "symthaea-inspect"
path = "src/main.rs"
